# CppProjects

./: README.md
BackgroundEstimation/: CMakeLists.txt  README.md  calculate_median.cpp  calculate_median.h  main.cpp
DCGAN/: CMakeLists.txt  celebA_opt.yaml
FaceDetection/: CMakeLists.txt  README.md  main.cpp  processing.cpp  processing.h
OPENCV/: CMakeLists.txt  main.cpp  processing.cpp
dcgan/: README.md  train_dcgan.py
